fixed layout bug

--- a/stylesheets/performancemonitor.css
+++ b/stylesheets/performancemonitor.css
@@ -118,7 +118,7 @@ div.dm-wrapperDiv div.dm-innerDiv p.dm-labelP {
 }
 .widgetIframe {
   width:350px;
-  height:215px;
+  height:225px;
   float:left
 }
 .frameHeader {
